cmake_minimum_required(VERSION 3.9)
project(practisePro)

set(CMAKE_CXX_STANDARD 11)

add_executable(practisePro
        complexListClone.cpp
        deepOfTree.cpp
        deleteNode.cpp
        digitOne.cpp
        findFirstInCommon.cpp
        findMaxSum.cpp
        findNumberAppendOnce.cpp
        findNumbersWithSum.cpp
        findSumPath.cpp
        firstNotRepeatChar.cpp
        getLastKNumber.cpp
        getNumberOfK.cpp
        getUglyNumber.cpp
        inversePairs.cpp
        isPostOrder.cpp
        isSubTree.cpp
        isValidOrder.cpp
        main.cpp
        mergeList.cpp
        minnum.cpp
        moreThanHalfNum.cpp
        numberOf1Between1AndN.cpp
        permutation.cpp
        power.cpp
        printBTreeFromTopToBottom.cpp
        printCombination.cpp
        printfMinNumber.cpp
        printListReversingly.cpp
        printMatrix.cpp
        printNDigits.cpp
        printProbability.cpp
        quicksort.cpp
        rebuiltTree.cpp
        reorderList.cpp
        replaceBlank.cpp
        reverseList.cpp
        reverseSentence.cpp
        serachBinArr.cpp
        solution.h
        stack2queue.cpp
        stackWithMin.cpp
        theLastKthNode.cpp
        treeToList.cpp)
