cmake_minimum_required(VERSION 3.9)
project(practisePro)

set(CMAKE_CXX_STANDARD 11)

add_executable(practisePro
    main.cpp
    printListReversingly.cpp
        rebuiltTree.cpp
    replaceBlank.cpp
    serachBinArr.cpp
    solution.h printNDigits.cpp deleteNode.cpp reorderList.cpp theLastKthNode.cpp reverseList.cpp mergeList.cpp isSubTree.cpp printMatrix.cpp stackWithMin.cpp isValidOrder.cpp printBTreeFromTopToBottom.cpp isPostOrder.cpp findSumPath.cpp complexListClone.cpp treeToList.cpp permutation.cpp printCombination.cpp moreThanHalfNum.cpp getLastKNumber.cpp findMaxSum.cpp numberOf1Between1AndN.cpp printfMinNumber.cpp getUglyNumber.cpp firstNotRepeatChar.cpp inversePairs.cpp findFirstInCommon.cpp getNumberOfK.cpp deepOfTree.cpp findNumberAppendOnce.cpp findNumbersWithSum.cpp reverseSentence.cpp printProbability.cpp)
